fixed text size on small screen for more responsiveness.

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
 }
 
 .heading{
-    font-size: 3rem;
+    font-size: 4.5vw;
     color: transparent;
 }
 
